[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ExsNetworkScan"
version = "1.2.4"
dependencies = [
  "scapy",
  "cursor"
]
requires-python = ">=3.8"
authors = [
  {name = "Exclavia", email = "exclaviarino@gmail.com"}
]
maintainers = [
  {name = "Exclavia", email = "exclaviarino@gmail.com"}
]
description = "A simple network scanner written in Python using Scapy"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "network", "scapy", "scanning-tool"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Topic :: System :: Networking :: Monitoring",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://git.exclavia.network/ExsNetworkScan"
Repository = "https://github.com/Exclavia/ExsNetworkScan.git"
Issues = "https://github.com/Exclavia/ExsNetworkScan/issues"
Changelog = "https://github.com/Exclavia/ExsNetworkScan/commits"


[project.scripts]
netscan = "NetExScan.main:config_set"

